# tiralabra-23

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
documentation/: implementation-document.md  project-specification.md  test-documentation.md  user-guide.md  weekly-report-1.md  weekly-report-2.md  weekly-report-3.md  weekly-report-4.md  weekly-report-5.md  weekly-report-6.md
src/: app.py  perf_test.py  perf_visual.py
src/entities/: huffman.py  lzw.py
src/gui/: about_frame.py  analysis_frame.py  comp_frame.py
src/gui/components/: method.py
src/services/: analysisservice.py  compressservice.py  fileservice.py
src/tests/: analysis_test.py  compression_test.py  fileservice_test.py  huffman_test.py  lzw_test.py
test-data/: 11940-8.txt
test-data/inputs/: lorem-1024.txt  lorem-1048576.txt  lorem-131072.txt  lorem-16384.txt  lorem-2048.txt  lorem-2097152.txt  lorem-262144.txt  lorem-32768.txt  lorem-4096.txt  lorem-512.txt  lorem-524288.txt  lorem-65536.txt  lorem-8192.txt
test-data/outputs/: analysis.csv
