[tool.poetry]
name = "tiralabra-23"
version = "0.1.0"
description = ""
authors = ["rauhja <82282638+rauhja@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
customtkinter = "^5.1.2"
invoke = "^2.0.0"
matplotlib = "^3.7.1"
pandas = "^2.0.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pylint = "^2.17.0"
pytest = "^7.2.2"
coverage = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
